- Work aimed at preventing retry storms when processing 'STOP' messages sent either by brand-new users or existing users that are already opted out. It sort of works but feels rickety and makes complicated logic even more complicated. - Added, possibly temporarily, RETRY and NOOP values to the ProcessState enum. - Changed PersistenceManager's saveSession and clearSession methods to return boolean instead of void and moved the calls in Session.flush() to the end of the method since the calls that followed can't really fail. Reads better now... - Updated and fixed all the tests in OperatorTest.